# closet

./: .gitignore  README.org  closet.cabal  default.nix  shell.nix
app/: Main.hs
src/: Closet.hs
test/: ClosetTest.hs
