cabal-version:       2.4
name:                closet
version:             0.1.0.0
synopsis:            The outfit generator
homepage:            github.com/Camsbury/closet
license:             MIT
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com

library
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                   Prelude
                   Closet
  default-extensions:
                     DerivingStrategies
                     FlexibleInstances
                     FunctionalDependencies
                     MultiParamTypeClasses
                     NoImplicitPrelude
                     OverloadedLists
                     OverloadedStrings
  build-depends:       base-noprelude >=4.12
                     , classy-prelude
                     , HDBC
                     , HDBC-sqlite3
                     , lens
                     , uuid

executable closet
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       base-noprelude >=4.12
                     , classy-prelude
                     , closet

test-suite closet-tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:
                     DerivingStrategies
                     NoImplicitPrelude
                     OverloadedLists
                     OverloadedStrings
  build-depends:       base-noprelude >=4.12
                     , classy-prelude
                     , closet
                     , hedgehog
                     , tasty
                     , tasty-discover
                     , tasty-hedgehog